Regserver builds but far from working or complete.

--- a/tools/regserver/CMakeLists.txt
+++ b/tools/regserver/CMakeLists.txt
@@ -1,3 +1,5 @@
 add_executable(regserver regserver.cpp)
+target_link_libraries(regserver routing ssu support plist krypto
+    ${Boost_LIBRARIES} ${OPENSSL_LIBRARIES})
 install(TARGETS regserver
     RUNTIME DESTINATION tools)
