Extract registry_record into its own file.

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_library(routing STATIC
     coordinator.cpp
     client_profile.cpp
-    regserver_client.cpp)
+    regserver_client.cpp
+    registry_record.cpp)
