--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 3.8)
 
 if (NOT BUILD_IN_UVVY)
     include(cmake/setup.cmake)
-    include_directories(3rdparty/endian 3rdparty/arsenal/include)
+    include_directories(3rdparty/arsenal/include)
     add_subdirectory(3rdparty/arsenal/lib)
 endif()
 
