--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.8)
 
 if (NOT BUILD_IN_UVVY)
     include(cmake/setup.cmake)
+    include_directories(3rdparty) #sodiumpp
     include_directories(3rdparty/arsenal/include)
     add_subdirectory(3rdparty/arsenal/lib)
     include_directories(3rdparty/uia/include)
