--- a/tools/regserver/CMakeLists.txt
+++ b/tools/regserver/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_executable(regserver regserver.cpp)
-target_link_libraries(regserver routing sss uia arsenal
+target_link_libraries(regserver routing uia arsenal
     ${Boost_LIBRARIES} sodiumpp)
 install(TARGETS regserver
     RUNTIME DESTINATION tools)
