--- a/tools/regserver/CMakeLists.txt
+++ b/tools/regserver/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_executable(regserver regserver.cpp)
 target_link_libraries(regserver routing uia arsenal
-    ${Boost_LIBRARIES} sodiumpp)
+    ${Boost_LIBRARIES} sodiumpp ${CMAKE_THREAD_LIBS_INIT})
 install(TARGETS regserver
     RUNTIME DESTINATION tools)
